# oblive

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  TODO  apkextract.c  build.gradle  codecov.yml  secrets.gradle  settings.gradle
.github/workflows/: ci.yml
annotations/: build.gradle  settings.gradle
apkextractor/: CMakeLists.txt
apkextractor/src/: apk2c-main.c  apkjar_tools.h  dex2jar.h  utility_macros.h
apkextractor/tests/: apk2c-testsuite.c  apkjar_tools-tests.c  apkjar_tools-tests.h
apkextractor/tests/tests_res/: changed_signature.apk  spanned.apk
gradle/wrapper/: gradle-wrapper.properties
java2c/: Makefile  build.gradle  gradlew
java2c/gradle/wrapper/: gradle-wrapper.properties
java2c/src/: obframework.h
java2c/src/cframework/: arithmetic.h  arrays.h  casts.h  cframework.h  conditionals.h  exceptions.h  fields.h  invoke.h  multi_arrays.h  new.h  stack.h
java2c/src/main/resources/: .clang-format  antidebug.c  antidebug.h  antidebug_child.c  antidebug_parent.c  arithmetic.h  arrays.h  casts.h  cframework.h  conditionals.h  fields.h  invoke.h  multi_arrays.h  new.h  stack.h  xoshiro256starstar.c
java2c/src/test/java/: Adder.java  Adder_tests.java
java2c/src/test/java/testclasses/: Adder.java  AdderInvokeMethod.java  AdderInvokeMethodChar.java  AdderInvokeMethodDouble.java  AdderInvokeMethodFloat.java  AdderInvokeMethodInt.java  AdderInvokeMethodLong.java  AdderInvokeMethodShort.java  AdderInvokeMethodVoid.java  AdderStaticMethod.java  AnonymousInnerClass.java  CollidingString.java  InvokeVirtualBoolean.java  InvokeVirtualByte.java  InvokeVirtualChar.java  InvokeVirtualDouble.java  InvokeVirtualFloat.java  InvokeVirtualInt.java  InvokeVirtualLong.java  InvokeVirtualObject.java  InvokeVirtualShort.java  InvokeVirtualVoid.java  MonitorMethod.java  MultiMethods.java  RecursiveMethod.java  TesterInvokeMethodBoolean.java
java2c/src/test/resources/: helloworld.cpp
oblive/: build.gradle
src/: apk2c-main.c  apkextract.c  apkjar_tools.c  apkjar_tools.h  dex2jar.c  dex2jar.h  error_handler.c  utility_macros.h  windows_defines.h
src/main/resources/: antidebug.h  arithmetic.h  casts.h  cframework.h  invoke.h  stack.h
src/test/java/testclasses/: AdderStaticMethod.java  AnonymousInnerClass.java  CollidingString.java  MonitorMethod.java  MultiMethods.java  MultipleAnnotations.java
src/test/java/testclasses/antidebug/: AntidebugSelfDebugging.java  AntidebugTimeCheck.java
src/test/java/testclasses/arithmetic/: DAdd.java  DDiv.java  DMul.java  DNeg.java  DRem.java  DSub.java  FAdd.java  FDiv.java  FMul.java  FNeg.java  FRem.java  FSub.java  IAdd.java  IAnd.java  IDiv.java  IInc.java  IMul.java  INeg.java  IOr.java  IRem.java  IShl.java  IShr.java  ISub.java  IUShr.java  IXor.java  LAdd.java  LAnd.java  LDiv.java  LMul.java  LNeg.java  LOr.java  LRem.java  LShl.java  LShr.java  LSub.java  LUShr.java  LXor.java
src/test/java/testclasses/casts/: CastDouble2Float.java  CastDouble2Int.java  CastDouble2Long.java  CastFloat2Double.java  CastFloat2Int.java  CastFloat2Long.java  CastInt2Byte.java  CastInt2Char.java  CastInt2Double.java  CastInt2Float.java  CastInt2Long.java  (+8 more)
src/test/resources/: helloworld.c  helluword.c
tests/: apk2c-testsuite.c  apkjar_tools-tests.c  apkjar_tools-tests.h
tests/tests_res/: app-debug.apk  half_correct_signature.apk
(+4294 files in other folders)
