cmake_minimum_required(VERSION 3.1 FATAL_ERROR)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
project(java2c C)
file(GLOB_RECURSE main_file src/apk2c.c)
file(GLOB_RECURSE sources src/extract_apk.c)
include_directories(src)
add_executable(apk2c ${main_file} ${sources})
find_package(ZLIB REQUIRED)
find_package(LIBZIP REQUIRED)
if(LIBZIP_FOUND)
    include_directories(${LIBZIP_INCLUDE_DIRS})
    target_link_libraries(apk2c ${LIBZIP_LIBRARY})
endif(LIBZIP_FOUND)
message(${CMAKE_MODULE_PATH})
