cmake_minimum_required(VERSION 3.1 FATAL_ERROR)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
project(java2c C)
file(GLOB_RECURSE main_file src/apk2c-main.c)
file(GLOB_RECURSE main_testfile tests/apk2c-testsuite.c)
file(GLOB_RECURSE sources src/apkjar_tools.c)
file(GLOB_RECURSE test_sources tests/apkjar_tools-tests.c)
include_directories(src)
add_executable(apk2c ${main_file} ${sources})
find_package(ZLIB REQUIRED)
find_package(LibZip REQUIRED)
find_package(CMocka)
include_directories(${LIBZIP_INCLUDE_DIRS})
target_link_libraries(apk2c ${LIBZIP_LIBRARY})
if(CMOCKA_FOUND)
    include_directories(${CMOCKA_INCLUDE_DIRS})
    add_executable(apk2c-testsuite ${main_testfile} ${sources} ${test_sources})
    target_link_libraries(apk2c-testsuite ${CMOCKA_LIBRARY})
    target_link_libraries(apk2c-testsuite ${LIBZIP_LIBRARY})
    add_definitions(-DTESTS_RES_PATH="${CMAKE_SOURCE_DIR}/tests/tests_res/")
endif(CMOCKA_FOUND)
set(CMAKE_VERBOSE_MAKEFILE ON)
